--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,23 +6,11 @@ Layout/EndOfLine:
   EnforcedStyle: lf
 Style/MethodMissingSuper:
   Enabled: false
-Layout/EmptyLineAfterGuardClause:
-  Enabled: false
-Layout/MultilineMethodCallIndentation:
-  Enabled: false
-Metrics/AbcSize:
-  Max: 65
-Metrics/BlockLength:
-  Max: 30
 Metrics/MethodLength:
   Max: 50
-Metrics/ClassLength:
-  Max: 180
-Metrics/CyclomaticComplexity:
-  Max: 10
-Metrics/PerceivedComplexity:
-  Max: 10
-Metrics/ParameterLists:
-  Max: 10
-Layout/AlignParameters:
+Layout/EndAlignment:
+  Enabled: false
+Layout/ElseAlignment:
+  Enabled: false
+Layout/IndentationWidth:
   Enabled: false
