--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,24 +1,19 @@
+docker:
+  image: denistreshchev/rultor-image:1.9.1
 assets:
   rubygems.yml: denistreshchev/home#assets/rubygems.yml
-install: |-
-  export GEM_HOME=~/.ruby
-  export GEM_PATH=$GEM_HOME:$GEM_PATH
+install: |
+  pdd -f /dev/null
   sudo bundle install --no-color "--gemfile=$(pwd)/Gemfile"
 release:
   script: |-
-    bundle exec rake
-    rm -rf *.gem
-    sed -i "s/0\.0\.0/${tag}/g" RubyDec.gemspec
-    git add RubyDec.gemspec
-    git commit -m "Version set to ${tag}"
-    gem build RubyDec.gemspec
+    bundle exec rake clean test rubocop copyright
+    sed -i "s/1\.0\.snapshot/${tag}/g" lib/sibit/version.rb
+    git add lib/sibit/version.rb
+    git commit -m "version set to ${tag}"
+    gem build sibit.gemspec
     chmod 0600 ../rubygems.yml
     gem push *.gem --config-file ../rubygems.yml
 merge:
   script: |-
-    bundle install
-    bundle exec rake
-deploy:
-  script: |-
-    echo 'Nothing to deploy'
-    exit -1
+    bundle exec rake clean test rubocop copyright
